<resources>
    <string name="app_name">SurveyMiB</string>
    <string name="email">Email</string>
    <string name="accedi">Accedi</string>
    <string name="password">Password</string>
    <string name="nome_progetto">Nome</string>
    <string name="autore">Autore</string>
    <string name="descrizione">Descrizione</string>
    <string name="link">Link</string>
    <string name="link_questionario">Inserire il link del questionario</string>
    <string name="requisiti">Requisiti</string>
    <string name="numero_questionari">Numero Componenti</string>
    <string name="creaPasso">Crea passo</string>
    <string name="area_somministratore">Area somministratore</string>
    <string name="rispondi_ai_quiz">RISPONDI AI QUIZ</string>
    <string name="inserisci_dati">INSERISCI DATI</string>
    <string name="nome">Nome</string>
    <string name="tvCreaSomm">Aggiungi un Somministratore</string>
    <string name="tvDescCreaSomm">In questa sezione andrai ad aggiungere un somministratore</string>
    <string name="btnCreaSomm">Aggiungi un Somministratore</string>
    <string name="tvEliminaSomm">Elimina Somministratore</string>
    <string name="tvDescEliminaSomm">In questa sezione, andrai ad eliminare un somministratore</string>
    <string name="btnEliminaSomm">Elimina Somministratore</string>
    <string name="imCreaSomm">TODO</string>
    <string name="imEliminaSomm">TODO</string>
    <string name="tvNomeProgettoFinale">Inserisci i dati</string>
    <string name="scrittaRisorse">Autore:</string>
    <string name="tfDescrizione">Descrizione</string>
    <string name="imInsertData">Inserisci Dati</string>
    <string name="tvProf">Aggiungi un somministratore</string>
    <string name="tfEmailSomm">Email</string>
    <string name="tfPassword">Password</string>
    <string name="tfAutore">Nome e Cognome</string>
    <string name="btnRegistraSomm">Riattiva somministratore</string>
    <string name="icon">TODO</string>
    <string name="tvTitolo">Scegli una sola opzione</string>
    <string name="imCaricaVideo">Inserisci video</string>
    <string name="imInsertPdf">Inserisci \npdf</string>
    <string name="btnUpload">Upload</string>
    <string name="tvNumeroQuestionariFinale">Inserisci il link del questionario</string>
    <string name="btnAnnulla">Annulla</string>
    <string name="imNextStep">PROSSIMO \nPASSO</string>
    <string name="imSaveProject">SALVA PROGETTO</string>
    <string name="password_dimenticata"><u>Password dimenticata?</u></string>
    <string name="intermediate_tvTitolo_nonIdoneo">Non sei idoneo al progetto</string>
    <string name="intermediate_tvDettaglioPasso_nonIdoneo">Mi dispiace non sei idoneo al progetto, verrai reindirizzato alla homepage.</string>
    <string name="intermediate_btnAvanti_nonIdoneo">Torna alla homepage</string>
    <string name="intermediate_tvTitolo_video">Stai per visualizzare un video</string>
    <string name="intermediate_tvDettaglioPasso_video">In questo passo stai per visualizzare un contenuto video.\nRicordati che, una volta finito di visionare il video, verrai automaticamente reindirizzato al passo successivo dopo che il video finisce.</string>
    <string name="intermediate_tvDettaglio_PDF">In questo passo stai per visualizzare un contenuto PDF.\nRicordati che, una volta finito di visionare il PDF, dovrai premere sul pulsante \'avanti\' in alto a destra della toolbar</string>
    <string name="intermediate_tvTitolo_PDF">Stai per visualizzare un PDF</string>
    <string name="intermediate_tvTitolo_questionario">Stai per svolgere un questionario</string>
    <string name="intermediate_tvDettaglioPasso_questionario">In questo passo stai per rispondere al questionario.\nRicordati che, se non terminerai il questionario quest\'ultimo verrà inserito nella sezione \'survey sospesi\'.\nNegli altri casi invece, non potrai più rispondere alle domande quindi, prima di completarlo pensaci bene.</string>
    <string name="intermediate_dialogTitle">Torna alla Homepage</string>
    <string name="intermediate_dialogMessage">Sicuro di voler tornare indietro?\nRicordati che, se non terminerai il questionario quest\'ultimo verrà inserito nella sezione \'survey sospesi\'.\nNegli altri casi invece, non potrai più rispondere alle domande quindi, prima di completarlo pensaci bene.</string>
    <string name="dialog_positive">Si</string>
    <string name="dialog_negative">No</string>
    <string name="nome_card1">Aggiungi una risorsa</string>
    <string name="compila_i_questionari">Compila i Questionari</string>
    <string name="in_questa_sezione_andrai_a_compilare_i_questionari_disponibili">In questa sezione, andrai a compilare i questionari disponibili</string>
    <string name="rispondi_ai_questionari">Rispondi ai questionari</string>
    <string name="in_questa_sezione_andrai_a_creare_i_progetti_che_verranno_visualizzati_dagli_utenti">In questa sezione, andrai a creare i progetti che verranno visualizzati dagli utenti</string>
    <string name="titolo">Titolo</string>
    <string name="sono_pronto">Sono pronto</string>
    <string name="nom_prog">TextView</string>
    <string name="nome_somministratore">Nome Somministratore</string>
    <string name="prova">Prova</string>
    <string name="inizia">Inizia</string>
    <string name="login_somministratore">Login Somministratore</string>
    <string name="prova_duep">prova</string>
    <string name="numero_di_risorse">Numero di risorse:</string>
    <string name="email_duep">Email:</string>
    <string name="descrizione_duep">Descrizione:</string>
    <string name="textview">TextView</string>
    <string name="testoprova">testoprova</string>
    <string name="elimina">Elimina</string>
    <string name="autore_duep">Autore:</string>
</resources>
