<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2E1"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main" />

    <TextView
        android:id="@+id/tvNomeProgetto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nome_progetto"
        android:textColor="@color/scritta"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvNomeProgettoFinale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:text="prova"
        android:textColor="@color/scritta"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNomeAutore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/autore"
        android:textColor="@color/scritta"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvAutore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:text="prova"
        android:textColor="@color/scritta"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNumeroQuestionari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/numero_questionari"
        android:textColor="@color/scritta"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvNumeroQuestionariFinale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="prova"
        android:textColor="@color/scritta"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDescrizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/descrizione"
        android:textColor="@color/scritta"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvDescrizioneFinale"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:scrollbars="vertical"
        android:text="prova"
        android:textColor="@color/scritta"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnStartProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/roboto"
        android:scaleType="fitCenter"
        android:text="Inizia progetto"
        app:srcCompat="@drawable/inziaprogetto"
        tools:ignore="ContentDescription" />

</LinearLayout>